--- a/css/pricing.css
+++ b/css/pricing.css
@@ -86,3 +86,22 @@
   .pricing-header {
     max-width: 700px;
   }
+
+  .hero-image {
+    background-image: url("/image/z1.jpg");
+    background-color: #cccccc;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #141614;
+  }
